Fixed alignment of text under vertical bar

--- a/src/components/visualizations/Arbeidsledighet/ArbeidsledighetVisualization.module.scss
+++ b/src/components/visualizations/Arbeidsledighet/ArbeidsledighetVisualization.module.scss
@@ -35,5 +35,15 @@
   }
   &_list {
     list-style: none;
+    vertical-align: middle;
+    display: flex;
+    svg {
+      height: 30px;
+      width: 25px;
+    }
+    &_text {
+      margin-top: 1px;
+      margin-left: 2px;
+    }
   }
 }
